# logscreen

./: .eslintrc.cjs  CHANGELOG.md  Cargo.toml  Dockerfile  cliff.toml  clippy.toml  cog.toml  dependency-cruiser.config.mjs  eslint.config.mjs  index.js  index.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.devcontainer/: devcontainer.json
.github/: file-filters.yml  settings.yml
.github/workflows/: build-rust.yml  build-typescript.yml  build.yml  ci.yml  graduate-release.yml  lint-commits.yml  machete.yml  publish-crate-after-release.yml  release.yml  retag-containers-after-release.yml  rust.yml  semgrep.yml  spellcheck.yml  test-release.yml
.husky/: pre-commit
back-end/src/: broadcast.rs  logs.rs  main.rs  router.rs  state.rs  tasks.rs
back-end/src/router/: html_router.rs  mod.rs
back-end/src/states/: config.rs
back-end/src/utils/: env.rs  mod.rs
crates/logscreen/: Cargo.toml
crates/logscreen/src/: broadcast.rs  logs.rs  main.rs  router.rs  tasks.rs
front-end/src/components/: app.tsx  error-boundary.tsx  log-viewer.tsx
front-end/src/entrypoints/: index.tsx
front-end/src/lib/: client-log-message.ts
