[package]
name = "logscreen"
# don't change this, it's updated before an actual build by update-version.sh
version = "0.0.0-development"
edition = "2024"
rust-version = "1.86.0"
authors = ["Kristof Mattei"]
description = "logscreen in Rust"
license-file = "LICENSE"
categories = ["fun"]
keywords = ["random"]
repository = "https://github.com/kristof-mattei/logscreen"

[[bin]]
name = "logscreen"
path = "back-end/src/main.rs"

[lints.clippy]
# don't stop from compiling / running
all = "warn"
cargo = "warn"
complexity = "warn"
correctness = "warn"
pedantic = "warn"
perf = "warn"
# restriction = "warn"
style = "warn"
suspicious = "warn"

# this one causes confusion when combining variables (`foo`) and
# dereferenced variables (`foo.bar`). The latter cannot be inlined
# so we don't inline anything
uninlined-format-args = { level = "allow", priority = 127 }

[lints.rust]
let_underscore_drop = { level = "deny", priority = 127 }
non_ascii_idents = { level = "deny", priority = 127 }

[[test]]
name = "logscreen"
path = "back-end/tests/integration_tests.rs"

[features]
default = []
console-subscriber = ["dep:console-subscriber"]

[dependencies]
axum = "0.8.3"
axum-proxy = { version = "0.3.0", features = ["axum"] }
color-eyre = { git = "https://github.com/eyre-rs/eyre", rev = "c4ee249f7c51dc6452e8704ae8d117d90d6eeebc" }
console-subscriber = { version = "0.4.1", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
socketioxide = { version = "0.16.2", features = ["tracing"] }
tokio = { version = "1.44.1", features = [
    "macros",
    "io-util",
    "io-std",
    "rt-multi-thread",
    "signal",
    "time",
] }
tokio-util = { version = "0.7.14", features = ["rt"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-error = "0.2.1"
url = { version = "2.5.3", features = ["serde"] }

[target.'cfg(all(any(target_arch="x86_64", target_arch="aarch64"), target_os="linux", target_env="musl"))'.dependencies]
openssl = { version = "0.10.71", features = ["vendored"] }
